syntax = 'proto3';

package proto;

option go_package = "github.com/apecloud/kubeblocks/internal/configuration/proto";

service Reconfigure {
  rpc StopContainer(StopContainerRequest) returns (StopContainerResponse) {}

  rpc OnlineUpgradeParams(OnlineUpgradeParamsRequest) returns (OnlineUpgradeParamsResponse) {}
}

message StopContainerRequest {
  repeated string containerIDs = 1;
}

message StopContainerResponse {
  string errMessage = 1;
}

message OnlineUpgradeParamsRequest {
}

message OnlineUpgradeParamsResponse {
  string errMessage = 1;
}