syntax = 'proto3';

package proto;

option go_package = "github.com/apecloud/kubeblocks/pkg/configuration/proto";

service Reconfigure {
  rpc OnlineUpgradeParams(OnlineUpgradeParamsRequest) returns (OnlineUpgradeParamsResponse) {}
}

message OnlineUpgradeParamsRequest {
  string configSpec = 1;
  map<string, string> params = 2;
  optional string configFile = 3;
}

message OnlineUpgradeParamsResponse {
  string errMessage = 1;
}